--- a/Amazon_Prime_Video_Content_Analysis.ipynb
+++ b/Amazon_Prime_Video_Content_Analysis.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "w6K7xa23Elo4",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -107,7 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "[Amazon Prime Video EDA Project](https://github.com/pmehta2612/Amazon-Prime-EDA-/blob/main/Amazon_Prime_Video_Content_Analysis.ipynb)"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
