--- a/Amazon_Prime_Video_Content_Analysis.ipynb
+++ b/Amazon_Prime_Video_Content_Analysis.ipynb
@@ -126,7 +126,7 @@
       "source": [
         "The dataset used in this project includes detailed information about Amazon Prime Video's content, such as titles, genres, release years, IMDb ratings, production countries, and cast/crew details. Our analysis will focus on answering the following key questions:\n",
         "* **Content Diversity:** Which genres and categories dominate the platform?\n",
-        "Regional Availability: How does content distribution vary across different countries?\n",
+        "* **Regional Availability:** How does content distribution vary across different countries?\n",
         "* **Trends Over Time:** How has Amazon Prime’s content library evolved?\n",
         "* **IMDb Ratings & Popularity:** What are the highest-rated or most popular shows?\n",
         "\n",
